[gd_scene load_steps=8 format=3 uid="uid://cpj5xjti7uvxe"]

[ext_resource type="Script" path="res://scripts/level_editor/level_editor.gd" id="1_575m6"]
[ext_resource type="PackedScene" uid="uid://cdt5thuqy1nk1" path="res://scenes/level_editor/ui/entity_list.tscn" id="2_152lh"]
[ext_resource type="Script" path="res://scripts/level_editor/ui/screen_space.gd" id="2_x1ocw"]
[ext_resource type="Script" path="res://scripts/level_editor/ui/ui_container.gd" id="3_esw5j"]
[ext_resource type="Script" path="res://scripts/level_editor/ui/save_level_button.gd" id="4_qabk7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f33vp"]

[sub_resource type="Theme" id="Theme_n14c1"]
Button/styles/focus = SubResource("StyleBoxEmpty_f33vp")

[node name="LevelEditor" type="Node2D"]
script = ExtResource("1_575m6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScreenSpace" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = SubResource("Theme_n14c1")
script = ExtResource("2_x1ocw")

[node name="EntityWaveContainer" type="Node2D" parent="CanvasLayer/ScreenSpace"]
unique_name_in_owner = true

[node name="UIContainer" type="PanelContainer" parent="CanvasLayer/ScreenSpace"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -193.0
offset_bottom = 1080.0
script = ExtResource("3_esw5j")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ScreenSpace/UIContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer"]
layout_mode = 2

[node name="EntityList" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_152lh")]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Wave"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="WaveDecrementButton" type="Button" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "  <  "

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="WaveNumber" type="Label" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveIncrementButton" type="Button" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "  >  "

[node name="SaveLevelButton" type="Button" parent="CanvasLayer/ScreenSpace/UIContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_n14c1")
text = "Save Level"
script = ExtResource("4_qabk7")

[node name="SelectionRect" type="ColorRect" parent="CanvasLayer/ScreenSpace"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 256.0
offset_top = 125.0
offset_right = 456.0
offset_bottom = 325.0
color = Color(0.67451, 1, 1, 0.0588235)
